# bonch-labs

./: .gitignore  README.md
1 course/AFSE/: README.md
1 course/AFSE/lab2/: main.go  report.docx
1 course/AFSE/lab3/: README.md  (+3 more)
1 course/Coursework/: graph.wxmx  intro.txt  main.cpp  report.docx
1 course/MDPL/: README.md
1 course/Programming/: CMakeLists.txt
2 course/OOP/: CMakeLists.txt
AFSE/: README.md  main.go
AFSE/lab1/: main.go  report.docx
AFSE/lab2/: main.go
AFSE/lab3/: README.md  lab3  lab3_secant.test  main.go  main_test.go  report.docx
AnyLogicModels/lab1/: lab1.alp
AnyLogicModels/lab2/: lab2.alp
AnyLogicModels/lab3/: lab3.alp
AnyLogicModels/lab4/: lab4.alp
Coursework/: CMakeLists.txt  README.md  graph.wxmx  main.cpp  report.docx
MDPL/: CMakeLists.txt  README.md  run.sh
MDPL/lab1/: CMakeLists.txt  bin32  bin64  main.c  main_asm.asm  run.sh  run32.sh
MDPL/lab2/: bin64  main.c  main_asm.asm
MDPL/lab3/: main_asm.asm
MDPL/lab4/: bin64  main.c  main_asm.asm
MDPL/lab5/: bin32  main.c  main_asm.asm
Programming/: CMakeLists.txt  README.md
Programming/2/: lab2.c
Programming/3/: lab3.docx
Programming/4/: lab4.c  lab4.docx
Programming/5/: lab5.c
Programming/6/: lab6.c  lab6.docx
Programming/7/: lab7.c  lab7.docx  source.h
Programming/8/: lab8.docx  source.h
Programming/lab1/: lab1.c
Programming/lab10/: lab10.c  lab10.docx
Programming/lab11/: data.txt  lab11.c  lab11.docx
Programming/lab12/: lab12.c
Programming/lab2/: lab2.docx
Programming/lab3/: lab3.c
Programming/lab8/: lab8.c
Programming/lab9/: lab9.c
(+82 files in other folders)
